[tool.poetry]
name = "randomshit"
version = "0.1.0"
description = ""
authors = ["Aleksei Liachko <alekseiliachko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.11.0.86"
mediapipe = "^0.10.21"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
